Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
Description
Open a file under posix standard, if o_create flag is set to true and the file exists, no side effect except O_EXCL is also be set true.
Open a file in HDFS with hdfs::create flag will report errors if file exists.
In libhdfs, the o_create flag is interpreted to hdfs::create, which leads to errors if file exists no matter O_EXCL is set or not.
Attachments
Issue Links
- links to