HAWQ-1143. Libhdfs create semantic is not consistent with posix standard.